# Vantaloom-app

./: .gitignore  package.json
.github/scripts/: node-compile-wave.sh
.github/workflows/: build-apk.yml  build-desktop.yml  build-node-release.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/libs/: README.md
android/app/src/main/: AndroidManifest.xml
desktop/: .gitignore  app.go  go.mod  go.sum  main.go  screenshot_other.go  screenshot_windows.go  wails.json  winctl_other.go  winctl_windows.go
desktop/internal/runtime/: manager.go  manager_test.go  mesh.go  mesh_test.go  node.go
desktop/internal/winproc/: winproc_other.go  winproc_windows.go
mobile-src/: go.mod  go.sum
mobile-src/loomnet/: dial.go  dialer.go  identity.go  node.go  punch.go  relay_client.go  relaysession.go  roundtrip.go  session.go  transport.go  verify.go
mobile-src/mobile/: bridge.go  hubclient.go  proxy.go
node/: SHA256SUMS
runtime-engines/: .gitignore  README.md  sources.lock.json
runtime-engines/go-runner/: README.md  go.mod  main.go  main_test.go  policy.go
runtime-engines/licenses/: README.md
runtime-engines/scripts/: build-all.sh  package_runtime.py
runtime-engines/src/: launcher.c
runtime-engines/src/patches/: node-disable-v8-trap-handler.patch  node-loopback-bind.patch
runtime-engines/tests/: test_package_runtime.py
signing/: README.md  vantaloom.keystore
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
web/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.html  _not-found.txt  index.html  index.txt
web/_next/static/chunks/: 00040ce44a6b63fc.js  0115a42f7b5d884b.js  01a4a51946e42f13.css  01c81fc66a16cd45.css  021870e69a4a0039.js  043f214f6515f0e5.js  046529b3166af9bc.js  05220f81de68b0bc.css  05e34c17500b1f72.js  06ae8888e5aff4ad.js  071fa9d75e611a4e.css  097141a69c5aa26e.css  09d2f3190e188aab.js  09fb28951b1fd6d6.css  0a2f079a9f95bfc3.js  0ae41ceb74b7be98.css  0c7fdf9979ab480b.js  0cf4a8a22a9bd1dc.css  0e28368ef7985327.css  (+394 more)
web/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.txt  __next._tree.txt
web/_not-found/__next._not-found/: __PAGE__.txt
web/mascots/: manifest.json
(+23 files in other folders)
