[package]
name = "vantaloom-android"
version = "0.6.0"
description = "Vantaloom mobile control node — joins the workgroup mesh and drives peer runtimes over P2P"
authors = ["Vantaloom"]
edition = "2021"

[lib]
# Tauri mobile loads the app as a shared/static lib via the generated entry point.
name = "vantaloom_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-os = "2"
tauri-plugin-shell = "2"

# Android/iOS TUN bridge: wraps the system VpnService so the in-process mesh
# core gets a TUN fd without root. Reused verbatim from the EasyTier repo.
# VERIFY: pin to a concrete rev once the toolchain is installed (a tag that
# contains the tauri-plugin-vpnservice workspace member).
tauri-plugin-vpnservice = { git = "https://github.com/EasyTier/EasyTier", tag = "v2.6.4" }

# EasyTier mesh core, run IN-PROCESS (no spawned binary, no root). Pin to the
# same release as the bundled desktop cores (vendor/easytier ... v2.6.4).
# VERIFY: the exact tag/rev resolves and builds for the android targets.
easytier = { git = "https://github.com/EasyTier/EasyTier", tag = "v2.6.4" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
once_cell = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
# Read Settings.Secure.ANDROID_ID over JNI for a reinstall-stable device id.
# jni 0.21 matches the version Tauri/EasyTier use on Android; ndk-context hands
# us the JavaVM + Activity pointers set up by the mobile entry point.
jni = "0.21"
ndk-context = "0.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# Desktop dev builds only (handy for iterating on the UI without a device).
tauri-plugin-single-instance = "2"

[features]
# Used by Tauri for production builds. DO NOT REMOVE.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Shrink the release APK: strip debug symbols, optimize for size, thin LTO.
# NOTE: no `panic = "abort"` — easytier/tauri rely on stack unwinding.
strip = true
opt-level = "s"
lto = "thin"
